samples/_failures_safe/1761378381_921a99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ed80005.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_2ed80005.c:145:9: error: expected declaration or statement at end of input
  145 |         case TOKEN_EOF: printf("EOF"); break;
      |         ^~~~
./samples/SAFE/__tmp_2ed80005.c:145:9: error: expected declaration or statement at end of input
